chore: Update HTML title tag in templates

--- a/0x02-i18n/templates/0-index.html
+++ b/0x02-i18n/templates/0-index.html
@@ -1,6 +1,6 @@
 {% extends "Base.html" %}
 
-{% block title %}Welcome to Holberton{% endblock %}
+{% block title %}<title>Welcome to Holberton</title>{% endblock %}
 
 {% block content %}
     <h1>Hello world</h1>
