--- a/0x02-i18n/templates/5-index.html
+++ b/0x02-i18n/templates/5-index.html
@@ -4,5 +4,9 @@
 
 {% block content %}
     <h1>{{ _('home_header') }}</h1>
-    <p>{{ _('home_paragraph') }}</p>
+    {% if g.user %}
+        <p>{{ _('logged_in_as', username=g.user.name) }}</p>
+    {% else %}
+        <p>{{ _('not_logged_in') }}</p>
+    {% endif %}
 {% endblock %}
